# ConcurrentMake

./: CCmake.txt  CMakeLists.txt  Node.cpp  Node.h  README.md  Scp.cpp  Scp.h  app.py  background_commun.cpp  background_commun.h  ccmake.cpp  ccmake.h  ccmake_node.sh  dependecies_parser.cpp  dependecies_parser.h  ipS  main.cpp  public_keys.db  server_communication.cpp  server_communication.h  server_communnication.h  test_main.cpp
SSH_Node/: Node.cpp  Node.h
dep/: CMakeCXXCompilerId.mf  Node.mf  Scp.mf  a.mf  b.mf  c.mf  ccmake.mf  d.mf  dep_graph.dot  dependecies_parser.mf  main.mf  server_communication.mf
node_daemon/: background_commun.cpp  background_commun.h  ccmake_node  ccmake_node.sh  requests.cpp  requests.h  sys_spec.cpp  sys_spec.h
scripts/: generate_lib.sh  link_whole.sh  test_script.sh
